jeg har ændret i title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="da">
 <head>
     <meta charset="UTF-8">
-    <title>gruppe 1 pop up</title>
+    <title>gruppe 1 pop odododo up</title>
 </head>
 <link rel="stylesheet" href="css/style.css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
