Jeg har ændret popup billedet
.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="login-form">
 <div class="popupCloseButton">X</div>
 <div class="login-face">
-<img src="img/bog-billede.png"></div>
+<img src="img/kogle-popup-image.png"></div>
 <div id="promotion-header">
 <h1 id="promotion-header-title">STRONG AND FIT IN <span>2020</span></h1></div>
 <section class="form">
