VI har ændret overskriften på loginform til at matche vores kunde

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="login-face">
 <img src="img/kogle-popup-image.png"></div>
 <div id="promotion-header">
-<h1 id="promotion-header-title">STRONG AND FIT IN <span>2020</span></h1></div>
+<h1 id="promotion-header-title"><span>Smagen af årstiderne</span></h1></div>
 <section class="form">
  <form action="#">
 <div id="promotion-body">
