vi har ændret body tekst på loginformen, så den matcher kunden

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <section class="form">
  <form action="#">
 <div id="promotion-body">
-<p id="promotion-body-text">Sign up for our Newsletter and learn to get fit at home with 5 Effective Low-Impact Workouts!</p>
+<p id="promotion-body-text">Kogle er vores arv, vores heritage.
+Er du interesseret i at få nyheder om nye smage etc.<br><br>Så tilmeld dig herunder!</p>
 </div>
 <div class="input">
 <input type="text" id="username" placeholder="John Mckinsey" name="username" required><i class="fa fa-user fa-1x"></i>
