VI har ændret footer tekst i loginform så den matcher kogle

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ Er du interesseret i at få nyheder om nye smage etc.<br><br>Så tilmeld dig her
 <input type="submit" id="submitBtn" name="submitBtn" value="Subscribe Newsletter!">
 </div>
 <div id="promotion-footer">
-<p id="promotion-footer-text">Yes, I would like to receive I FORM\'s newsletter with exciting articles as well as marketing about I FORM via e-mail. You can unsubscribe at any time. Read more!</p>
+<p id="promotion-footer-text">Ja, jeg vil gerne modtage nyheder og andet relevant indhold i form af email fra Kogle.
+</p>
 </div>
 </form>
 </section>
