--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 Er du interesseret i at få nyheder om nye smage etc.<br><br>Så tilmeld dig herunder!</p>
 </div>
 <div class="input">
-<input type="text" id="username" placeholder="John Mckinsey" name="username" required><i class="fa fa-user fa-1x"></i>
+<input type="text" id="username" placeholder=" Navn" name="username" required><i class="fa fa-user fa-1x"></i>
 </div>
 <div class="input">
-<input type="email" id="email" placeholder="mckinsey@hotmail.com" name="email" required><i class="fa fa-envelope fa-1x"></i>
+<input type="email" id="email" placeholder=" email" name="email" required><i class="fa fa-envelope fa-1x"></i>
 </div>
 <div id="submitForm">
-<input type="submit" id="submitBtn" name="submitBtn" value="Subscribe Newsletter!">
+<input type="submit" id="submitBtn" name="submitBtn" value="Tilmeld mig nyhedsbrevet!">
 </div>
 <div id="promotion-footer">
 <p id="promotion-footer-text">Ja, jeg vil gerne modtage nyheder og andet relevant indhold i form af email fra Kogle.
